Alignment issues resolved and other visual changes

--- a/about_us.css
+++ b/about_us.css
@@ -9549,7 +9549,8 @@ margin-top: 2.5rem;
   /* background: #000; */
   /* background-color: rgb(245, 237, 237); */
   background: #0abdc797;
-  backdrop-filter: blur(10px);
+  backdrop-filter: blur(10px); background-color: #00000036;
+  backdrop-filter: blur(13px);
   /* background-color: #02b3bd; */
   
   /* visibility: hidden; */
@@ -9568,13 +9569,27 @@ margin-top: 2.5rem;
   color: white !important;
 }
 .overlay-nav-link li a{
-  color: white !important;
+  /* color: white !important; */
   /* color: #dd2721a6; */
   font-weight: bold;
+  color: rgba(255, 166, 0, 0.67);
+  color: rgba(255, 166, 0, 0.8);
+
+
 
 
 }
+.overlay-nav-link li a:hover {
+  /* color: white !important; */
+  /* color: #dd2721a6; */
+  font-weight: bold;
+  color: rgba(255, 166, 0, 0.67);
+  color: rgba(255, 166, 0);
 
+
+
+
+}
 .nav--overlay[data-visible="true"] {
   visibility: visible;
   transition: all 0.4s;
@@ -9602,13 +9617,15 @@ margin-top: 2.5rem;
   right: 10%;
   top: 4%;
   color: rgba(245, 237, 237, 0.513);
+  color: rgba(255, 166, 0, 0.67);
   
   transition-duration: 300ms;
 }
 .nav--closes:hover {
   color: rgba(0, 0, 0, 0.335);
   color: rgb(245, 33, 86);
-  color: white;
+  color: white; color: rgba(255, 166, 0);
+
 }
 .nav-about-linker {
   color: #03e9f4;
@@ -9617,4 +9634,6 @@ margin-top: 2.5rem;
   /* text-decoration: underline 2px; */
   border-bottom: 2px solid #03e9f4;
   padding-bottom: 1px;
+  color: rgba(255, 166, 0);
+  border-bottom: 2px solid rgba(255, 166, 0);
 }
