--- a/restaurent.css
+++ b/restaurent.css
@@ -9757,6 +9757,8 @@ visibility: hidden;
   background: #0abdc797;
   backdrop-filter: blur(10px);
   /* background-color: #02b3bd; */
+  background-color: #00000036;
+  backdrop-filter: blur(13px);
 
   /* visibility: hidden; */
 }
@@ -9777,9 +9779,24 @@ visibility: hidden;
 }
 
 .overlay-nav-link li a {
-  color: white !important;
+  /* color: white !important; */
   /* color: #dd2721a6; */
   font-weight: bold;
+  color: rgba(255, 166, 0, 0.67);
+  color: rgba(255, 166, 0, 0.8);
+
+
+
+
+}
+.overlay-nav-link li a:hover {
+  /* color: white !important; */
+  /* color: #dd2721a6; */
+  font-weight: bold;
+  color: rgba(255, 166, 0, 0.67);
+  color: rgba(255, 166, 0);
+
+
 
 
 }
@@ -9811,6 +9828,8 @@ visibility: hidden;
   right: 10%;
   top: 4%;
   color: rgba(245, 237, 237, 0.513);
+  color: rgba(255, 166, 0, 0.67);
+
 
   transition-duration: 300ms;
 }
@@ -9819,6 +9838,8 @@ visibility: hidden;
   color: rgba(0, 0, 0, 0.335);
   color: rgb(245, 33, 86);
   color: white;
+  color: rgba(255, 166, 0);
+
 }
 
 .nav-home-linker {
@@ -9828,4 +9849,8 @@ visibility: hidden;
   /* text-decoration: underline 2px; */
   border-bottom: 2px solid #03e9f4;
   padding-bottom: 1px;
+  color: rgba(255, 166, 0);
+  border-bottom: 2px solid rgba(255, 166, 0);
+
+
 }
